--- a/assets/css/standards.css
+++ b/assets/css/standards.css
@@ -263,7 +263,7 @@ button:active {
   border: 1px solid #d2d2d2;
   box-shadow: 0px 20px 30px rgba(0, 0, 0, 0.1);
   border-radius: 10px;
-  margin: 20px 45px;
+  margin: 0px 45px;
   display: flex;
   padding: 30px 0 0;
   flex-direction: column;
