--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -290,7 +290,7 @@ video {
 }
 
 .features .containerCenter {
-  margin: 160px auto;
+  margin: 100px auto;
 }
 
 /*
